Fix spacing

--- a/app/sass/_general.scss
+++ b/app/sass/_general.scss
@@ -14,6 +14,10 @@ main {
   padding-right: 2.5rem;
   padding-top: 1.5rem;
   padding-bottom: 23px;
+
+	@media (min-width: 768px) {
+		padding-right: 2rem;
+	}
 }
 
 .py-25 {
